--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -19,7 +19,7 @@
     <main class="w-auto m-auto text-center">
         <form>
             <img class="mb-4 rounded" src="/login/img/academia.png" alt="" width="100" height="100">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 fw-normal">Login</h1>
 
             <div class="form-floating mb-2">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -37,6 +37,7 @@
                 </label>
             </div>
             <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+            <p>Não possuí cadastro? <a href="/cadastro">Clique aqui.</a></p>
             <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
         </form>
     </main>
