--- a/views/login/cadastro.ejs
+++ b/views/login/cadastro.ejs
@@ -22,27 +22,27 @@
             <h1 class="h3 mb-3 fw-normal">Cadastro</h1>
 
             <div class="form-floating mb-2">
-                <input type="text" class="form-control" id="nome" placeholder="Nome">
+                <input type="text" class="form-control" id="nome" placeholder="Nome" name="nome">
                 <label for="nome">Nome</label>
             </div>
 
             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email">
                 <label for="email">Email</label>
             </div>
 
             <div class="form-floating mb-2">
-                <input type="password" class="form-control" id="senha" placeholder="Senha">
+                <input type="password" class="form-control" id="senha" placeholder="Senha" name="senha">
                 <label for="senha">Senha</label>
             </div>
 
             <div class="form-floating mb-2">
-                <input type="file" class="form-control" id="foto" placeholder="Foto">
+                <input type="file" class="form-control" id="foto" placeholder="Foto" name="foto">
                 <label for="foto">Foto</label>
             </div>
 
             <div class="form-check text-start my-3">
-                <input class="form-check-input" type="checkbox" value="admin" id="admin">
+                <input class="form-check-input" type="checkbox" value="admin" id="admin" name="admin">
                 <label class="form-check-label" for="admin">
                     Admin
                 </label>
