--- a/views/login/cadastro.ejs
+++ b/views/login/cadastro.ejs
@@ -17,7 +17,7 @@
 
 <body class="d-flex align-items-center p-4 bg-body-tertiary">
     <main class="w-auto m-auto text-center">
-        <form>
+        <form method="post">
             <img class="mb-4 rounded" src="/login/img/academia.png" alt="" width="100" height="100">
             <h1 class="h3 mb-3 fw-normal">Cadastro</h1>
 
