--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -17,26 +17,26 @@
 
 <body class="d-flex align-items-center p-4 bg-body-tertiary">
     <main class="w-auto m-auto text-center">
-        <form>
+        <form method="post">
             <img class="mb-4 rounded" src="/login/img/academia.png" alt="" width="100" height="100">
             <h1 class="h3 mb-3 fw-normal">Login</h1>
 
             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
+                <label for="floatingInput">Email</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Senha" name="senha">
+                <label for="floatingPassword">Senha</label>
             </div>
 
             <div class="form-check text-start my-3">
                 <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
-                    Remember me
+                    Lembre-me
                 </label>
             </div>
-            <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+            <button class="btn btn-primary w-100 py-2" type="submit">Login</button>
             <p>Não possuí cadastro? <a href="/cadastro">Clique aqui.</a></p>
             <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
         </form>
