--- a/views/login/inicial.ejs
+++ b/views/login/inicial.ejs
@@ -19,7 +19,7 @@
     <main class="w-auto m-auto text-center">
         <img class="mb-4 rounded" src="/login/img/academia.png" alt="" width="100" height="100">
             <h1 class="h3 mb-3 fw-normal">Escolha seu sistema</h1>
-        <a href="/admin/" class="btn btn-primary btn-lg">Admin</a>
+        <a href="/admin/lstalunos" class="btn btn-primary btn-lg">Admin</a>
         <a href="/aluno/" class="btn btn-secondary btn-lg">Aluno</a>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
